# auth_test_task

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
app/: __init__.py  main.py
app/core/: config.py  security.py  user.py
app/crud/: __init__.py  user.py
app/models/: __init__.py  base.py  user.py
app/repository/: __init__.py  sessions.py
app/router/: auth.py
app/schemas/: __init__.py  user.py
tests/: test_auth.py
